--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,24 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Meme Me View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MemeMeViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wpw-Y8-DFg">
+                                <rect key="frame" x="0.0" y="84" width="414" height="738"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4bw-Ez-5XG" userLabel="Top Stack View">
+                                <rect key="frame" x="0.0" y="44" width="414" height="82.5"/>
+                                <subviews>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Zzh-K9-a7l">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                        <items>
+                                            <barButtonItem systemItem="reply" id="eeq-7f-OE7" userLabel="Share Bar Button">
+                                                <connections>
+                                                    <action selector="shareImage:" destination="BYZ-38-t0r" id="YKc-69-mGb"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="ovC-Ac-K6b"/>
+                                            <barButtonItem title="Cancel" id="9bc-D5-QPd" userLabel="Cancel Bar Button">
+                                                <connections>
+                                                    <action selector="cancel:" destination="BYZ-38-t0r" id="QzG-n2-OGT"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                        <color key="barTintColor" systemColor="systemGray4Color"/>
+                                    </toolbar>
+                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hEY-69-qlv">
+                                        <rect key="frame" x="0.0" y="64" width="414" height="18.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JPS-2j-oRd" userLabel="Bottom Stack View">
+                                <rect key="frame" x="0.0" y="776" width="414" height="86"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="LZ4-Ey-drU">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="22"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="ija-xU-24t" userLabel="Bottom Toolbar">
+                                        <rect key="frame" x="0.0" y="42" width="414" height="44"/>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="vcj-UQ-Ub0"/>
+                                            <barButtonItem systemItem="camera" id="gc4-Rj-cJk" userLabel="Camera Bar Button">
+                                                <connections>
+                                                    <action selector="pickImageUsingCamera:" destination="BYZ-38-t0r" id="SMi-zi-Um6"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="elt-aE-Xhj"/>
+                                            <barButtonItem title="Album" id="dOF-dI-WvI" userLabel="Album Bar Button">
+                                                <connections>
+                                                    <action selector="pickImageFromAlbum:" destination="BYZ-38-t0r" id="yZo-14-mGi"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="MZh-GN-tjA"/>
+                                        </items>
+                                        <color key="barTintColor" systemColor="systemGray4Color"/>
+                                    </toolbar>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wpw-Y8-DFg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8o5-N1-oHA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JPS-2j-oRd" secondAttribute="trailing" id="BSU-UG-Sp8"/>
+                            <constraint firstItem="4bw-Ez-5XG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="LBi-eT-C6p"/>
+                            <constraint firstItem="JPS-2j-oRd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PE6-VF-not"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wpw-Y8-DFg" secondAttribute="trailing" id="RyA-ex-tfe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4bw-Ez-5XG" secondAttribute="trailing" id="X5Z-6L-GIp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JPS-2j-oRd" secondAttribute="bottom" id="dVu-SM-2nz"/>
+                            <constraint firstItem="wpw-Y8-DFg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="eeC-jf-uY2"/>
+                            <constraint firstItem="4bw-Ez-5XG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lSp-A1-Ukn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wpw-Y8-DFg" secondAttribute="bottom" constant="40" id="lo0-BH-DKh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomTextField" destination="LZ4-Ey-drU" id="wWD-Zu-qfg"/>
+                        <outlet property="bottomToolBar" destination="ija-xU-24t" id="UCr-Dr-XJ9"/>
+                        <outlet property="cameraBarButton" destination="gc4-Rj-cJk" id="UfB-AR-fYQ"/>
+                        <outlet property="imageView" destination="wpw-Y8-DFg" id="mEN-Pr-wfU"/>
+                        <outlet property="shareBarButton" destination="eeq-7f-OE7" id="5L3-E7-7HF"/>
+                        <outlet property="topTextField" destination="hEY-69-qlv" id="8JG-P6-Lww"/>
+                        <outlet property="topToolBar" destination="Zzh-K9-a7l" id="klG-qF-rhU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="59" y="60"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
